font is changed

--- a/dog.html
+++ b/dog.html
@@ -6,6 +6,9 @@
     <title>Собака</title>
 
     <style>
+      * {
+        font-family: Arial, Helvetica, sans-serif;
+      }
       table {
         border-collapse: collapse;
       }
