--- a/monkey.html
+++ b/monkey.html
@@ -6,6 +6,9 @@
     <title>Обезьяна</title>
 
     <style>
+      * {
+        font-family: Arial, Helvetica, sans-serif;
+      }
       table {
         border-collapse: collapse;
       }
